--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-boto3==1.18.64
 botocore==1.21.64
-docker==5.0.3
+boto3==1.26.5
+sagemaker==2.115.0
+requests==2.26.0
+urllib3==1.26.5
+chardet==3.0.4
 jinja2==3.0.3
+docker==5.0.3
